--- a/index.html
+++ b/index.html
@@ -18,42 +18,42 @@
 
         
         <div class="project">
-            <img src="/imagenes/casa.jpg" alt="Proyecto 1">
+            <img src="casa.jpg" alt="Proyecto 1">
             <p>Casa hecha en un poblado bonga</p>
         </div>
 
         <div class="project">
-            <img src="/imagenes/construccion.jpg" alt="Proyecto 2">
+            <img src="construccion.jpg" alt="Proyecto 2">
             <p>Casa en proceso en la bonga</p>
         </div>
 
         <div class="project">
-            <img src="/imagenes/construccion2.jpg" alt="Proyecto 3">
+            <img src="construccion2.jpg" alt="Proyecto 3">
             <p>proyecto en proceso</p>
         </div>
 
         <div class="project">
-            <img src="/imagenes/imagen4.jpg" alt="Proyecto 4">
+            <img src="imagen4.jpg" alt="Proyecto 4">
             <p>Placa hecha en metaldeck</p>
         </div>
 
         <div class="project">
-            <img src="/imagenes/imagen5.jpg" alt="Proyecto 5">
+            <img src="imagen5.jpg" alt="Proyecto 5">
             <p>Proyecto de la casa en la bonga</p>
         </div>
 
         <div class="project">
-            <img src="/imagenes/imagen 6.jpg" alt="Proyecto 6">
+            <img src="imagen 6.jpg" alt="Proyecto 6">
             <p></p>
         </div>
 
         <div class="project">
-            <img src="/imagenes/imagen7.jpg" alt="Proyecto 7">
+            <img src="imagen7.jpg" alt="Proyecto 7">
             <p></p>
         </div>
 
         <div class="project">
-            <img src="/imagenes/imagen8.jpg" alt="Proyecto 8">
+            <img src="imagen8.jpg" alt="Proyecto 8">
             <p>segunda casa en el poblado</p>
         </div>
 
