--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         
         <div class="project">
-            <img src="casa.jpg" alt="Proyecto 1">
+            <img src="/imagenes/casa.jpg" alt="Proyecto 1">
             <p>Casa hecha en un poblado bonga</p>
         </div>
 
